Modernize Java language (#396)
* Use new language features
* Update checkstyle version
* Tweak codeRabbit config